# bazel-skaffold-with-golang

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-golang-skaffold  bazel-out  bazel-testlogs  deps.bzl  go.mod  go.sum  hello_world.yaml  skaffold.yaml
cmd/: BUILD.bazel  main.go
